# define-json

./: .gitignore  404.html  CONVERSION_README.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  define-json.yaml  define.yaml  demo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  validate_schema.py
About/: index.html
AliasPredicate/: index.html
AliasPredicateEnum/: index.html
Boolean/: index.html
CONVERSION_README/: index.html
CodeList/: index.html
CodeListItem/: index.html
Coding/: index.html
CodingMapping/: index.html
Comment/: index.html
ComponentList/: index.html
ConceptProperty/: index.html
Condition/: index.html
CubeComponent/: index.html
Curie/: index.html
DataAttribute/: index.html
DataProduct/: index.html
DataProductLifecycleStatus/: index.html
DataProvider/: index.html
DataService/: index.html
DataStructureDefinition/: index.html
Dataflow/: index.html
DataflowRelationship/: index.html
Dataset/: index.html
DatasetKey/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Define-JSON/: index.html
Dictionary/: index.html
Dimension/: index.html
DimensionRelationship/: index.html
Distribution/: index.html
DocumentReference/: index.html
Double/: index.html
Float/: index.html
FormalExpression/: index.html
Formatted/: index.html
Governed/: index.html
GovernedElement/: index.html
GroupKey/: index.html
GroupRelationship/: index.html
Identifiable/: index.html
IdentifiableElement/: index.html
Integer/: index.html
(+1175 files in other folders)
